--- a/app/src/main/res/layout/activity_characters_list.xml
+++ b/app/src/main/res/layout/activity_characters_list.xml
@@ -7,14 +7,15 @@
     tools:context=".presentation.CharactersListActivity">
 
     <ImageView
-        android:id="@+id/iv_title"
+        android:id="@+id/iv_banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:contentDescription="@string/rick_and_morty"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/rick_and_morty_banner" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -22,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/iv_title"
+        app:layout_constraintTop_toBottomOf="@id/iv_banner"
         tools:listitem="@layout/item_character"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
