--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -1,72 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    card_view:cardBackgroundColor="@android:color/transparent"
     android:layout_margin="4dp"
+    android:elevation="3dp"
+    card_view:cardCornerRadius="40dp"
     app:cardUseCompatPadding="true">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
     <ImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="8dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
+        style="@style/ListTextStyle"
         android:id="@+id/tv_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/iv_avatar"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="8dp"
-        android:text="Name:" />
+        android:textColor="@color/text_rick_and_morty"
+        android:text="@string/name" />
 
     <TextView
+        style="@style/ListTextStyle"
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/tv_name_label"
         app:layout_constraintTop_toTopOf="@+id/tv_name_label"
         android:layout_marginStart="8dp"
+        android:textColor="@color/text_rick_and_morty"
         tools:text="Rick Sanchez" />
 
     <TextView
+        style="@style/ListTextStyle"
         android:id="@+id/tv_species_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/iv_avatar"
         app:layout_constraintTop_toBottomOf="@+id/tv_name"
         android:layout_margin="8dp"
-        android:text="Species:" />
+        android:textColor="@color/text_rick_and_morty"
+        android:text="@string/species" />
 
     <TextView
+        style="@style/ListTextStyle"
         android:id="@+id/tv_species"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/tv_species_label"
         app:layout_constraintTop_toTopOf="@+id/tv_species_label"
         android:layout_marginStart="8dp"
+        android:textColor="@color/text_rick_and_morty"
         tools:text="Human" />
 
     <TextView
+        style="@style/ListTextStyle"
         android:id="@+id/tv_gender_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/iv_avatar"
         app:layout_constraintTop_toBottomOf="@+id/tv_species"
         android:layout_margin="8dp"
-        android:text="Gender:" />
+        android:textColor="@color/text_rick_and_morty"
+        android:text="@string/gender" />
 
     <TextView
+        style="@style/ListTextStyle"
         android:id="@+id/tv_gender"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
